update the size of search icon

--- a/src/components/header/Search/Search.css
+++ b/src/components/header/Search/Search.css
@@ -14,8 +14,8 @@
 .search-icon {
     padding-left: 10px;
     color: #73726c;
-    width: 30px;
-    height: 30px;
+    width: 30px !important;
+    height: 30px !important;
 }
 
 .search-wrap input {
