--- a/src/components/pages/header/Header.css
+++ b/src/components/pages/header/Header.css
@@ -46,6 +46,11 @@
     display: flex;
 }
 
+.header-right__btn {
+    display: flex;
+    align-items: center;
+}
+
 .header-btn {
     margin-left: 1.2rem !important;
 }
