--- a/src/components/pages/course/overview/Overview.scss
+++ b/src/components/pages/course/overview/Overview.scss
@@ -1,5 +1,7 @@
 .overview {
     background-color: #FFFFFF !important;
+    overflow-y: auto;
+
     .title-course {
         margin-bottom: 2rem;
         color: #1f1f1f;
@@ -39,8 +41,19 @@
                     display: flex;
                     width: 100%;
                     height: 100%;
-                    justify-content: center;
                     align-items: center;
+
+                    .icon {
+                        font-size: 1.2rem;
+                        margin-left: 1rem;
+                    }
+
+                    p {
+                        margin-bottom: 0;
+                        margin-left: .5rem;
+                        font-weight: bolder;
+                        font-family: OpenSans-Bold,OpenSans,Arial,sans-serif;
+                    }
                 }
 
                 &:hover {
