--- a/src/components/pages/header/Header.css
+++ b/src/components/pages/header/Header.css
@@ -11,7 +11,7 @@
     left: 0;
     right: 0;
     z-index: 1000;
-    background-color: #FFFFFF;
+    background: linear-gradient(90deg,#48b1bf,#677ebd);
 }
 .header-row {
     display: flex;
