--- a/src/components/pages/course/lectureByWeek/Lecture.scss
+++ b/src/components/pages/course/lectureByWeek/Lecture.scss
@@ -85,19 +85,8 @@
         padding-left: 10% !important;
     }
 
-    .player-wrapper {
-        position: relative;
-        padding-top: 56.25%;
-        margin-bottom: 2rem;
-    }
-
-    .react-player {
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-
     .pedal {
+        margin-top: 2rem;
         height: 1px;
     }
     
