--- a/src/components/pages/footer/Footer.css
+++ b/src/components/pages/footer/Footer.css
@@ -17,7 +17,7 @@
 }
 
 .footer-store img {
-    height: 45px;
+    width: 100%;
     margin-bottom: 1rem;
 }
 
@@ -39,4 +39,28 @@
 .social {
     display: flex;
     justify-content: space-around;
+}
+
+
+@media only screen and (max-width: 480px) {
+    .footer-store img {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 576px) {
+    
+}
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+    
+}
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+    
+    
+}
+
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+    
 }
