--- a/src/components/pages/login/Login.scss
+++ b/src/components/pages/login/Login.scss
@@ -27,42 +27,56 @@
     }
 
     .inner-left {
-        width: min-content;
-    }
+        width: 100%;
+        flex: auto;
 
-    .inner-left p {
-        color: #73818f;
-        text-align: center;
-        margin-top: 15px;
-        font-size: 21px;
-        font-weight: 500;
-        line-height: 1.2;
+        p {
+            color: #73818f;
+            text-align: center;
+            margin-top: 15px;
+            font-size: 21px;
+            font-weight: 500;
+            line-height: 1.2;
+        }
+
+        img {
+            width: 100%;
+            max-width: fit-content;
+        }
     }
 
     .inner-right {
         flex: 0 0 40%;
-    }
+        margin-left: 1rem;
 
-    .inner-right h3{
-        color: rgb(31, 31, 31);
-        font-size: 34px;
-        line-height: 42px;
-        text-align: center;
-        font-weight: 400;
-        margin-bottom: 40px;
-    }
+        h3{
+            color: rgb(31, 31, 31);
+            font-size: 34px;
+            line-height: 42px;
+            text-align: center;
+            font-weight: 400;
+            margin-bottom: 40px;
+        }
 
-    .input-wrap {
-        background-color: #e6e6e6;
-        border-radius: 25px;
-        display: flex;
-        align-items: center;
-    }
+        form label {
+            text-align: left;
+            display: block;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
 
-    .input-icon {
-        color: rgb(163, 156, 156);
-        margin-left: 15px;
-        font-size: 1rem;
+        .input-wrap {
+            background-color: #e6e6e6;
+            border-radius: 25px;
+            display: flex;
+            align-items: center;
+    
+            .input-icon {
+                color: rgb(163, 156, 156);
+                margin-left: 15px;
+                font-size: 1rem;
+            }
+        }
     }
 
     input {
@@ -86,12 +100,7 @@
         color: #2A73CC;
     }
 
-    label {
-        text-align: left;
-        display: block;
-        margin-bottom: 10px;
-        margin-top: 10px;
-    }
+    
 
     .form-btn {
         cursor: pointer;
@@ -113,10 +122,11 @@
         text-transform: uppercase;
         font-weight: 600;
         transition: all 0.5s;
+
+        &:hover {
+            color: #23282c;
+        }
     }
 
-    .submit-btn:hover {
-        color: #23282c;
-    }
 
 }
