quiz editor before use react hook form

--- a/src/components/pages/course/Course.scss
+++ b/src/components/pages/course/Course.scss
@@ -11,6 +11,10 @@
 
     .menu_item {
         padding-left: 40px !important;
+
+        a {
+            display: block;
+        }
     }
 
     .menu_item:hover {
