--- a/src/components/pages/author/editCourse/fragment/EditWeekName.scss
+++ b/src/components/pages/author/editCourse/fragment/EditWeekName.scss
@@ -6,6 +6,10 @@
 
         .ewn-btn {
             display: none;
+            background-color: rgb(11, 223, 187);
+            color: #fff;
+            font-weight: 500;
+            font-family: 'Roboto';
         }
 
         .ewn-btn-act {
