--- a/src/components/pages/author/editCourse/fragment/VideoEditor.scss
+++ b/src/components/pages/author/editCourse/fragment/VideoEditor.scss
@@ -44,4 +44,10 @@
     .status-switch {
         margin-top: 1rem;
     }
+
+    .err-msg {
+        flex: 0 0 100%;
+        margin-bottom: 0;
+        color: red;
+    }
 }
