--- a/src/components/pages/course/lectureByWeek/LectureQuiz/LectureQuiz.scss
+++ b/src/components/pages/course/lectureByWeek/LectureQuiz/LectureQuiz.scss
@@ -71,6 +71,10 @@
             }
             
         }
+
+        .column-state {
+            text-transform: capitalize;
+        }
     }
 
     .lecture-quiz-grade {
