--- a/src/components/pages/quiz/Quiz.scss
+++ b/src/components/pages/quiz/Quiz.scss
@@ -6,6 +6,7 @@
         margin-bottom: 0;
         font-family: CiscoSans, Arial,sans-serif;
         color: #58585b;
+        text-transform: capitalize;
     }
     .quiz-content {
         text-align: left;
