--- a/src/components/pages/quiz/review/Review.scss
+++ b/src/components/pages/quiz/review/Review.scss
@@ -1,5 +1,6 @@
 .review {
     h2 {
+        text-transform: capitalize;
         text-align: left;
         font-size: 1.75rem;
         font-weight: 200;
