--- a/src/components/pages/course/lectureByWeek/Lecture.scss
+++ b/src/components/pages/course/lectureByWeek/Lecture.scss
@@ -28,6 +28,7 @@
 
     .lecture-menu-item {
         height: auto;
+        min-height: 50px;
         white-space: normal;
         line-height: 1.5;
         font-size: 0.75rem;
