--- a/src/components/pages/course/overview/Overview.scss
+++ b/src/components/pages/course/overview/Overview.scss
@@ -22,6 +22,7 @@
     .week-content {
         display: flex;
         margin: 1.5rem 0;
+        flex-wrap: wrap;
 
         .left {
             flex: 0 0 40%;
@@ -38,6 +39,7 @@
                 margin-right: 1rem;
 
                 a {
+                    color: #000;
                     display: flex;
                     width: 100%;
                     height: 100%;
@@ -73,21 +75,22 @@
                     width: 100%;
                     height: 100%;
 
-                    tr:nth-child(1):hover{
-                        background-color: #FFFFFF;
-                    }
-
-                    tr:hover {
-                        background-color: #f0f0f0;
+                    tbody {
+                        
+                        tr:hover {
+                            background-color: #f0f0f0;
+                        }
                     }
 
                 }
 
                 .require {
-                    display: flex;
                     height: 100%;
-                    align-items: center;
-
+                    
+                    a {
+                        display: flex;
+                        align-items: center;
+                    }
                     .check {
                         margin-right: .5rem;
                         
@@ -103,5 +106,10 @@
                 }
             }
         }
+    }
+
+    .pendal {
+        height: 1px;
+        margin-top: 1rem;
     }
 }
