--- a/src/components/pages/course/progressCourse/ProgressCourse.scss
+++ b/src/components/pages/course/progressCourse/ProgressCourse.scss
@@ -7,6 +7,11 @@
     .progress-course-poster {
         a {
             display: block;
+
+            img {
+                width: 100%;
+                
+            }
         }
     }
 
@@ -73,6 +78,12 @@
             min-height: 36px;
             line-height: 1rem;
             font-weight: 500;
+            max-width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .edit-btn {
@@ -87,6 +98,8 @@
         .resume-btn {
             background-color: rgb(42, 115, 204);
             border: 1px solid rgb(42, 115, 204);
+            
+            
 
             &:hover {
                 background-color: rgb(1, 86, 184);
